--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "config": {
     "blanket": {
       "pattern": [
-        "migi-serer/build"
+        "index.js"
       ]
     }
   },
@@ -45,7 +45,7 @@
   },
   "main": "./index",
   "engines": {
-    "node": ">= 6.0"
+    "node": ">= 8.0"
   },
   "readmeFilename": "README.md"
 }
