--- a/package.json
+++ b/package.json
@@ -35,14 +35,14 @@
   "devDependencies": {
     "babel-core": "~6.23.1",
     "babel-preset-es2015": "~6.22.0",
-    "blanket": "~1.1.7",
-    "coveralls": "~2.11.2",
-    "expect.js": "~0.3.1",
+    "blanket": "^1.1.6",
+    "coveralls": "^2.11.2",
+    "expect.js": "^0.3.1",
     "gulp": "~3.9.0",
     "gulp-rename": "~1.2.2",
     "gulp-util": "^3.0.1",
     "jaw": "~3.0.0",
-    "lefty": "~3.8.0",
+    "lefty": "~3.8.1",
     "migi-es6-shim": "*",
     "mocha": "~2.2.5",
     "mocha-lcov-reporter": "~0.0.2",
