--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
   "devDependencies": {
     "babel-core": "~6.23.1",
     "babel-preset-es2015": "~6.22.0",
-    "blanket": "^1.1.6",
-    "coveralls": "^2.11.2",
+    "blanket": "^1.2.3",
+    "coveralls": "^3.0.0",
     "expect.js": "^0.3.1",
     "gulp": "~3.9.0",
     "gulp-rename": "~1.2.2",
@@ -44,8 +44,8 @@
     "jaw": "~3.0.0",
     "lefty": "~3.8.1",
     "migi-es6-shim": "*",
-    "mocha": "~2.2.5",
-    "mocha-lcov-reporter": "~0.0.2",
+    "mocha": "^4.1.0",
+    "mocha-lcov-reporter": "^1.3.0",
     "through2": "~2.0.0"
   },
   "main": "./index",
