--- a/package.json
+++ b/package.json
@@ -25,7 +25,12 @@
   "config": {
     "blanket": {
       "pattern": [
-        "index.js"
+        "index.js",
+        "Component.js"
+      ],
+      "data-cover-never": [
+        "node_modules",
+        "test"
       ]
     }
   },
