--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "devDependencies": {
     "babel-core": "~6.23.1",
     "babel-preset-es2015": "~6.22.0",
+    "benchmark": "^2.1.4",
     "blanket": "^1.2.3",
     "coveralls": "^3.0.0",
     "expect.js": "^0.3.1",
