--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "migi-server",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "String-Based && High-Performance Server Side Render Template for migi",
   "maintainers": [
     {
@@ -44,6 +44,7 @@
     "gulp": "^3.9.1",
     "gulp-rename": "~1.2.2",
     "gulp-util": "^3.0.1",
+    "lefty": "^7.0.2",
     "mocha": "^4.1.0",
     "mocha-lcov-reporter": "^1.3.0",
     "through2": "~2.0.0"
